force-app/main/default/objects/Related_Records_Highlight_Panel_Setting__mdt/Related_Records_Highlight_Panel_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings for how to render the custom Related Records Highlights panel</description>
    <label>Related Records Highlight Panel Setting</label>
    <pluralLabel>Related Record Highlight Panel Settings</pluralLabel>
</CustomObject>