force-app/main/default/objects/Related_Records_Highlight_Panel_Setting__mdt/fields/Component_Id__c.field-meta.xml
<CustomField>
    <fullName>Component_Id__c</fullName>
    <description>Identifies which instance of a Component that this highlight item should be displayed in. The Id here should be the same as entered on the Component in the Lightning Record Page.</description>
    <inlineHelpText>Identifies which instance of a Component that this highlight item should be displayed in. The Id here should be the same as entered on the Component in the Lightning Record Page.</inlineHelpText>
    <label>Component Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>