force-app/main/default/objects/Related_Records_Highlight_Panel_Setting__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>The icon to use - Should use the SLDS icons documented here:
https://www.lightningdesignsystem.com/icons/</description>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>