force-app/main/default/objects/Related_Records_Highlight_Panel_Setting__mdt/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description>The text that will be shown as the header of the highlight item</description>
    <label>Item Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>