force-app/main/default/objects/Related_Records_Highlight_Panel_Setting__mdt/fields/Items_Query__c.field-meta.xml
<CustomField>
    <fullName>Items_Query__c</fullName>
    <description>The query that should be used to fetch the items to display

The query should use the :recordId parameter to indicate the &quot;Parent record&quot; id. Ex:

To get all cases related to the account:
SELECT Subject FROM Case WHERE AccountId = :recordId</description>
    <inlineHelpText>SOQL query for fetching hightlight items. The id of the parent record is passed as :recordId</inlineHelpText>
    <label>Items Query</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>