force-app/main/default/objects/Related_Records_Highlight_Panel_Setting__mdt/fields/Show_Empty_Items__c.field-meta.xml
<CustomField>
    <fullName>Show_Empty_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, an item that does not contain any records will still be rendered in the component.</description>
    <inlineHelpText>If checked, an item that does not contain any records will still be rendered in the component.</inlineHelpText>
    <label>Show Empty Items</label>
    <type>Checkbox</type>
</CustomField>