force-app/main/default/objects/Related_Records_Highlight_Panel_Setting__mdt/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <description>The name of the SObject to render</description>
    <label>SObject Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>