force-app/main/default/objects/Related_Records_Highlight_Panel_Setting__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>The order that columns should be shown. Goes from 0 - 9</description>
    <inlineHelpText>0-9</inlineHelpText>
    <label>Sort Order</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>