force-app/main/default/objects/Related_Records_Highlight_Panel_Setting__mdt/fields/Table_Columns__c.field-meta.xml
<CustomField>
    <fullName>Table_Columns__c</fullName>
    <description>Columns to show in records table</description>
    <inlineHelpText>In Display Order. Separated by &quot;,&quot;. 
Example:
Name,Title,Status,NumberOfCases__c

Note: First Column will be the record link.</inlineHelpText>
    <label>Table Columns</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>